# ballista

rust/: Cargo.toml
rust/ballista/: Cargo.toml
rust/ballista/proto/: ballista.proto
rust/ballista/src/: client.rs  context.rs  error.rs  lib.rs
rust/ballista/src/_bin/: executor.rs
rust/ballista/src/scheduler/: etcd.rs  mod.rs  planner.rs
rust/ballista/src/scheduler/execution_plans/: mod.rs  unresolved_shuffle.rs
rust/ballista/src/serde/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/serde/physical_plan/: from_proto.rs  mod.rs  to_proto.rs
rust/ballista/src/utils/: datagen.rs  mod.rs
rust/benchmarks/tpch/: docker-compose.yaml
rust/core/proto/: ballista.proto
rust/lib/src/executor/: flight_service.rs
rust/proto/: Cargo.toml  README.md
rust/proto/src/: lib.rs
rust/scheduler/src/: lib.rs
rust/scheduler/src/state/: etcd.rs  mod.rs  standalone.rs
spark/: README.md
spark/benchmarks/: Dockerfile
spark/benchmarks/src/main/scala/org/ballistacompute/spark/benchmarks/: Main.scala
