[package]
name = "ballista"
description = "Distributed compute platform based on Apache Arrow"
license = "Apache-2.0"
version = "0.4.0-SNAPSHOT"
homepage = "https://github.com/ballista-compute/ballista"
repository = "https://github.com/ballista-compute/ballista"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[dependencies]
http = "0.1"
kube = "0.35"
k8s-openapi = { version = "0.8.0", features = ["v1_13"] }
proc-macro2 = "1.0.24"
prost = "0.6"
prost-types = "0.6"
reqwest = "0.9.18"
sqlparser = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }


#env_logger = { version = "0.6", default-features = false }
#futures = "0.3"
#log = "0.4"
#tokio = { version = "0.2", features = ["full"] }
#tonic = "0.2"
#flatbuffers = "0.6.0"
#async-channel = "1.4.0"
#crossbeam = "0.7"
#smol = { version = "0.1.18", features = ["tokio02"] }
#async-trait = "0.1.36"
#random-fast-rng = "0.1.1"
#structopt = "0.3"
#etcd-client = "0.5"
#fnv = "1.0.7"

arrow = { git = "https://github.com/apache/arrow" }
arrow-flight = { git = "https://github.com/apache/arrow" }
datafusion = { git = "https://github.com/apache/arrow" }
parquet = { git = "https://github.com/apache/arrow" }

#[[_bin]]
#name = "executor"
#path = "src/_bin/executor.rs"

[build-dependencies]
prost-build = { version = "0.6.1" }

[dev-dependencies]
criterion = "0.3"


